[package]
name = "psbt_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.27"
base64 = "0.13"
axum = { version = "0.6.4", features = ["headers", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = { version = "1.0.68", features = ["raw_value"] }
serde_with = "1.10.1"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1"